--- a/pages/books/marcus/meditations.mdx
+++ b/pages/books/marcus/meditations.mdx
@@ -31,7 +31,7 @@ though his constitution was weak, he showed great personal courage to
 encounter the fiercest boars. At the same time he was kept from the
 extravagancies of his day. The great excitement in Rome was the strife
 of the Factions, as they were called, in the circus. The racing drivers
-used to adopt one of four colours--red, blue, white, or green--and their
+used to adopt one of four colours-red, blue, white, or green-and their
 partisans showed an eagerness in supporting them which nothing could
 surpass. Riot and corruption went in the train of the racing chariots;
 and from all these things Marcus held severely aloof.
@@ -58,8 +58,8 @@ this book), the Sarmatians, the Catti, the Jazyges. In Rome itself there
 was pestilence and starvation, the one brought from the east by Verus's
 legions, the other caused by floods which had destroyed vast quantities
 of grain. After all had been done possible to allay famine and to supply
-pressing needs--Marcus being forced even to sell the imperial jewels to
-find money--both emperors set forth to a struggle which was to continue
+pressing needs-Marcus being forced even to sell the imperial jewels to
+find money-both emperors set forth to a struggle which was to continue
 more or less during the rest of Marcus's reign. During these wars, in
 169, Verus died. We have no means of following the campaigns in detail;
 but thus much is certain, that in the end the Romans succeeded in
@@ -111,7 +111,7 @@ him several children, of whom he was passionately fond. Their innocent
 faces may still be seen in many a sculpture gallery, recalling with odd
 effect the dreamy countenance of their father. But they died one by
 one, and when Marcus came to his own end only one of his sons still
-lived--the weak and worthless Commodus. On his father's death Commodus,
+lived-the weak and worthless Commodus. On his father's death Commodus,
 who succeeded him, undid the work of many campaigns by a hasty and
 unwise peace; and his reign of twelve years proved him to be a ferocious
 and bloodthirsty tyrant. Scandal has made free with the name of Faustina
